--- a/UnderstandingTheJVM/三.字节码.md
+++ b/UnderstandingTheJVM/三.字节码.md
@@ -7,7 +7,10 @@
   - 使用terminal指令分析字节码文件
 
     ```shell
+    // 显示公有的成员变量信息
     javap -verbose .class文件名
+    // 显示所有的（包括私有和公有）的成员变量信息
+    javap -verbose -p .class文件名
     ```
 
 - 基本结构
@@ -210,7 +213,9 @@ CAFEBABE
 | ACC_ANNOTATION | 0x2000     | 注解类型                  | 注解           |
 | ACC_ENUM       | 0x4000     | 枚举类型                  | 枚举           |
 
-<!--如果值为0x0021，则表示ACC_PUBLIC和ACC_SUPER进行并集-->
+- 注意
+  - 如果值为0x0021，则表示ACC_PUBLIC和ACC_SUPER进行并集
+  - 如果值为0x0000，则表示默认的修饰符
 
 ### 1.Practice
 
@@ -385,6 +390,46 @@ Constant pool:
 | u4   | attribute_length       | 1    |
 | u1   | info[attribute_length] |      |
 
+- 注意
+
+  - **类中的成员变量赋值是在构造方法中,如果有多个构造方法，每个构造方法中都会赋值；构造方法中也会有参数（java中的每一个非静态方法，第一个参数都是隐式的this），参数是this，也就是当前类的对象——重点**
+
+    <!--实现-->
+
+    ```java
+    // 举例类
+    public class MyTest1 {
+        private int a = 1 ;
+    
+        public MyTest1(){
+    
+        }
+    }
+    ```
+
+    ```java
+    // 构造方法的反编译结果
+    public ByteCode.MyTest1();
+        descriptor: ()V
+        flags: (0x0001) ACC_PUBLIC
+        Code:
+          stack=2, locals=1, args_size=1  // args_size = 1；原因就是传入的参数有this
+             0: aload_0
+             1: invokespecial #1           // Method java/lang/Object."<init>":()V
+             4: aload_0
+             5: iconst_1
+             6: putfield      #2           // Field a:I  ，成员变量赋值在构造方法中
+             9: return
+          LineNumberTable:
+            line 15: 0
+            line 13: 4
+            line 17: 9
+          LocalVariableTable:
+            Start  Length  Slot  Name   Signature
+                0      10     0  this   LByteCode/MyTest1;
+    
+    ```
+
 ### 1.Practice——重点
 
 <!--编译后的常量池-->
@@ -423,7 +468,7 @@ Constant pool:
 
 <!--解析-->
 
-1.Fields结束的位置为225行的00 05 00 06 00 00字节，结合后续的Code Attribute表、LineNumberTable表、LocalVariableTable表
+1.Fields结束的位置为225行的00 05 00 06 00 00字节，结合后续的属性表（包括Code Attribute表、LineNumberTable表、LocalVariableTable表）
 
 ```java
 // 1.Methods数量
@@ -450,7 +495,7 @@ Constant pool:
   // max_stack，查看《Code Attribute表》，u2类型
   00 02 // 该方法运行时能达到的操作数栈的最大深度为2
   // max_locals，查看《Code Attribute表》，u2类型
-  00 01 // 方法执行期间创建的局部变量的数目为1，包含传入的参数的局部变量
+  00 01 // 方法执行期间创建的局部变量的数目为1，包含传入的参数的局部变量，这个局部变量就是this 
   // code_length，查看《Code Attribute表》，u4类型
   00 00 00 0A // 字节数为10个
   
@@ -514,14 +559,24 @@ Constant pool:
 
 ## 3.8 Attributes
 
-- 包含以下属性表
-  - Code Attribute
-  - LineNumberTable
-  - LocalVariableTable等
+- 作用：显示附加属性
+- 分类
 
-### 1.Code Attribute
+| 属性名称           | 使用位置               | 含义                                 |
+| ------------------ | ---------------------- | ------------------------------------ |
+| Code               | 方法表                 | Java代码编译成的字节码指令           |
+| ConstantValue      | 字段表                 | final关键字定义的常量值              |
+| Deprecated         | 类文件，字段表，方法表 | 被声明为deprecated的方法和字段       |
+| Exceptions         | 方法表                 | 方法抛出的异常                       |
+| InnerClasses       | 类文件                 | 内部类列表                           |
+| LineNumberTable    | Code属性               | Java源码的行号与字节码指令的对应关系 |
+| LocalVariableTable | Code属性               | 方法的局部变量描述                   |
+| SourceFile         | 类文件                 | 源文件名称                           |
+| Synthetic          | 类文件，字段表，方法表 | 标识方法或字段是由编译器自动生成的   |
 
-- 作用：作为Code第一种属性，保存该方法的结构
+### 1.Code
+
+- 作用：作为Code方法表，保存该方法的结构
 - 《Code Attribute表》
 
 | 类型           | 名称                   | 数量                   | 注解                                                         |
@@ -529,7 +584,7 @@ Constant pool:
 | u2             | attribute_name_index   | 1                      |                                                              |
 | u4             | attribute_length       | 1                      | 不包含attribute_name_index和attribute_length                 |
 | u2             | max_stack              | 1                      | 该方法运行时能达到的操作数栈的最大深度                       |
-| u2             | max_locals             | 1                      | 方法执行期间创建的局部变量的数目，包含传入的参数的局部变量   |
+| u2             | max_locals             | 1                      | 方法执行期间创建的局部变量的数目(单位为Slot)，包含传入的参数的局部变量 |
 | u4             | code_length            | 1                      | 方法包含的字节码的字节数以及具体的指令码（虚拟机执行的字节码） |
 | u1             | code                   | code_length            |                                                              |
 | u2             | exception_table_length | 1                      |                                                              |
@@ -537,11 +592,91 @@ Constant pool:
 | u2             | attribute_count        | 1                      | 查看后续属性表                                               |
 
 - 注意
+
   - 《Code Attribute表》的attribute_count看出后续的属性数量，如果不为零，则后续两个字节为attribute_name_index字段，能够通过查询常量池看出是什么属性表
+
+  - max_locals的单位为Slot，小于32位的值（如int、byte、float）占用1一个Slot，double、long占用两个Slot。并不是方法中定义了多少个局部变量，就把这些局部变量所占Slot之和作为max_locals的值，当代码执行超过一个局部变量的作用域时，这个局部变量占用的Slot就可以被其他局部变量所使用，Javac编译器会根据变量的作用域来分配Slot给各个变量使用，然后计算max_locals的大小，见实现1和实现2
+
+    <!--实现1-->
+
+    ```java
+    // 源代码
+    public class MyTest2 {
+        public void test(){
+            int a = 1;
+            double b = 5.34;
+            try {
+            } catch (Exception ex){
+    
+            }finally {
+                System.out.println("Finally");
+            }
+    
+        }
+    }
+    ```
+
+    ```java
+    // 反编译文件
+    stack=2, locals=4, args_size=1
+    ```
+
+    <!--解析-->
+
+    1.locals=4，分别是以下四个：this，a各占一个Slot，b因为是double类型，占两个Slot
+
+    
+
+    <!--实现2：存在局部变量所占用的Slot被其他局部变量所使用-->
+
+    ```java
+    // 源代码1
+    public class MyTest3 {
+        public void test(){
+            int a = 1;
+            int b = 2;
+            if(a < 4){
+                int c = 3;
+            }
+            int d = 4;
+            int e = 5;
+        }
+    }
+    ```
+
+    ```java
+    // 源代码1的反编译
+    stack=2, locals=5, args_size=1
+    // locals分别是this,a,b,d,e各占一个Slot
+    ```
+
+    ```java
+    // 源代码2，增加int f
+    public class MyTest3 {
+        public void test(){
+            int a = 1;
+            int b = 2;
+            if(a < 4){
+                int c = 3;
+                int f = 6;
+            }
+            int d = 4;
+            int e = 5;
+        }
+    }
+    ```
+
+    ```java
+    // 源代码1的反编译
+    stack=2, locals=5, args_size=1
+    // locals也是5，说明存在局部变量所占Slot被占用的情况
+    ```
+
+    
 
 ### 2.LineNumberTable
 
-- 作用：作为Code第二种属性，跟在Code Attribute后面，在堆栈抛异常的时候可以记录代码的行号或者调试程序时候记录代码行号，也称为行号表
+- 作用：作为Code的一种属性，在堆栈抛异常的时候可以记录代码的行号或者调试程序时候记录代码行号，也称为行号表，展示字节码与源代码行号之间的对应关系（bytecode和源代码行号对应）
 - 《LineNumberTable表》
 
 | 类型             | 名称                     | 数量 | 注解                       |
@@ -563,7 +698,7 @@ Constant pool:
 
 ### 3.LocalVariableTable
 
-- 作用：作为Code第三种属性，跟在LineNumberTable后面，描述栈帧中局部变量表中的变量和源码中的变量之间的关系
+- 作用：作为Code的一种属性，描述栈帧中局部变量表中的变量和源码中的变量之间的关系
 - 《LocalVariableTable表》
 
 | 类型                | 名称                        | 数量 | 注解                             |
@@ -583,9 +718,140 @@ Constant pool:
 | u2   | descriptor_index | 1    | 指向常量池的索引，即局部变量描述名称索引 |
 | u2   | index            | 1    | 局部变量在栈帧局部变量表中的slot位置     |
 
+- 注意
 
+  - LocalVariableTable中变量如果需要在运行期生成，则不显示在LocalVariableTable表中
 
+    <!--实现-->
 
+    ```java
+    // 源代码
+    public class MyTest2 {
+        public void test(){
+            int a = 1;
+            try {
+                InputStream is = new FileInputStream("test.txt");
+            } catch (FileNotFoundException e) {
+    
+            }catch (Exception e){
+    
+            }finally {
+                System.out.println("Finally");
+            }
+    
+        }
+    }
+    ```
+
+    ```java
+    // 字节码文件
+     LocalVariableTable:
+            Start  Length  Slot  Name   Signature
+                0      59     0  this   LByteCode/MyTest2;
+                2      57     1     a   I
+    ```
+
+### 4.Exception
+
+- 作用：作为属性表的一种，属于方法表，用于处理方法抛出的异常
+
+- exception_table结构如下
+
+| 类型 | 名称       | 数量 | 注解 |
+| ---- | ---------- | ---- | ---- |
+| u2   | start_pc   | 1    |      |
+| u2   | end_pc     | 1    |      |
+| u2   | handler_pc | 1    |      |
+| u2   | catch_type | 1    |      |
+
+- 注意
+  - 当字节码在第`start_pc`行到第`end_pc`行之间（不包含`end_pc`行）出现了类型为`catch_type`或者其子类的异常，则转到第`handler_pc`行继续处理
+  - 当异常处理存在finally语句块时，JVM会将finally语句块复制拼接到每一个catch语句块之后（有多少catch语句块，就有多少finally语句块）
+- 实现
+
+<!--源代码-->
+
+```java
+public class MyTest2 {
+    public void test(){
+        try {
+            InputStream is = new FileInputStream("test.txt");
+        } catch (FileNotFoundException e) {
+
+        }catch (Exception e){
+
+        }finally {
+            System.out.println("Finally");
+        }
+
+    }
+}
+```
+
+<!--反编译的test方法-->
+
+```java
+ public void test();
+    descriptor: ()V
+    flags: (0x0001) ACC_PUBLIC
+    Code:
+      stack=3, locals=3, args_size=1
+         0: new           #2                  // class java/io/FileInputStream
+         3: dup
+         4: ldc           #3                  // String test.txt
+         6: invokespecial #4                  // Method java/io/FileInputStream."<init>":(Ljava/lang/String;)V
+         9: astore_1
+        10: getstatic     #5                  // Field java/lang/System.out:Ljava/io/PrintStream;
+        13: ldc           #6                  // String Finally
+        15: invokevirtual #7                  // Method java/io/PrintStream.println:(Ljava/lang/String;)V
+        18: goto          56
+        21: astore_1
+        22: getstatic     #5                  // Field java/lang/System.out:Ljava/io/PrintStream;
+        25: ldc           #6                  // String Finally
+        27: invokevirtual #7                  // Method java/io/PrintStream.println:(Ljava/lang/String;)V
+        30: goto          56
+        33: astore_1
+        34: getstatic     #5                  // Field java/lang/System.out:Ljava/io/PrintStream;
+        37: ldc           #6                  // String Finally
+        39: invokevirtual #7                  // Method java/io/PrintStream.println:(Ljava/lang/String;)V
+        42: goto          56
+        45: astore_2
+        46: getstatic     #5                  // Field java/lang/System.out:Ljava/io/PrintStream;
+        49: ldc           #6                  // String Finally
+        51: invokevirtual #7                  // Method java/io/PrintStream.println:(Ljava/lang/String;)V
+        54: aload_2
+        55: athrow
+        56: return
+      Exception table:
+         from    to  target type
+             0    10    21   Class java/io/FileNotFoundException
+             0    10    33   Class java/lang/Exception
+             0    10    45   any
+```
+
+<!--解析-->
+
+1.所有catch代码块后面，都存在finally代码块
+
+## 3.9 Synchronized关键字
+
+- 规则
+  - 同一个线程访问一个Synchronized对象，会增加计数器的值，每次访问加1
+  - 不同线程访问一个Synchronized对象，必须等待其他线程结束后才能访问
+  - monitorenter和monitorexit一起出现，monitorenter代表的入口只有一个，但是monitorexit代表的出口可以有多个，比如有异常后的退出方式等
+
+## 3.10 栈帧
+
+- 栈帧 定义：帮助虚拟机执行方法调用和方法执行的数据结构
+- 栈帧 结构：封装了方法的局部变量表、动态链接信息、方法的返回地址以及操作数栈等信息
+
+### 1.符号引用和直接引用
+
+- 符号引用 定义：一组符号来描述所引用的目标, 符号可以是任何形式的字面量, 只要使用时能够无歧义的定位到目标即可 <!--比如类的全限定名-->
+- 直接引用 定义：引用的内容(类, 对象, 变量或者方法等)的地址 <!--比如对象具体的地址-->
+- 转换规则
+  - 部分符号引用是在类加载阶段转换为直接引用，称为静态解析
+  - 部分符号引用是在每次运行期转换为直接引用，称为动态链接，体现了多态
 
 
 
