--- a/Core Java/五.继承.md
+++ b/Core Java/五.继承.md
@@ -7,13 +7,187 @@
 
 ## 5.1 类、超类和子类
 
-### 5.1.2 覆盖方法
+### 5.1.2 方法重载和重写——重点
+
+<!--可以和多态结合，静态分派和动态分派-->
 
 - 规则
+  
   - 超类和子类中的方法签名相同（方法名和参数列表），返回值类型需要保证一样或者是返回值类型的子类（协变返回类型）
+  
 - 覆盖和重载的区别
+  - 重载是静态行为，是编译器行为；重写是动态行为，是运行期行为
+  
+    需要确认方法的调用者
+  
   - 覆盖是方法签名相同
+  
   - 重载是方法名相同，参数列表必须不同，对返回类型，访问修饰符，异常声明没有任何限制 <!--可以看作一个新方法，只是方法名称特殊-->
+  
+- 实现：证明重载是静态行为
+
+  <!--代码-->
+
+- ```java
+  public class MyTest4 {
+      public void test(Grandpa grandpa){
+          System.out.println("Grandpa");
+      }
+      public void test(Father father){
+          System.out.println("Father");
+      }
+      public void test(Son son){
+          System.out.println("Son");
+      }
+  
+      public static void main(String[] args) {
+          Grandpa p1 = new Father();
+          Grandpa p2 = new Son();
+  
+          MyTest4 myTest4 = new MyTest4();
+          
+          myTest4.test(p1);
+          myTest4.test(p2);
+      }
+  }
+  
+  class Grandpa{}
+  class Father extends Grandpa{}
+  class Son extends Father{}
+  
+  /* output
+  Grandpa
+  Grandpa
+  */
+  ```
+
+  <!--反编译-->
+
+  ```shell
+ 0 new #7 <ByteCode/Father>
+   3 dup
+   4 invokespecial #8 <ByteCode/Father.<init>>
+   7 astore_1
+   8 new #9 <ByteCode/Son>
+  11 dup
+  12 invokespecial #10 <ByteCode/Son.<init>>
+  15 astore_2
+  16 new #11 <ByteCode/MyTest4>
+  19 dup
+  20 invokespecial #12 <ByteCode/MyTest4.<init>>
+  23 astore_3
+  24 aload_3
+  25 aload_1
+  26 invokevirtual #13 <ByteCode/MyTest4.test>
+  29 aload_3
+  30 aload_2
+  31 invokevirtual #13 <ByteCode/MyTest4.test>
+  34 return
+  ```
+  
+  <!--解析-->
+  
+  **1.p1和p2的静态类型是Grandpa，p1的实际类型是Father，p2的实际类型是Son。静态类型不会发生改变，动态类型能够在运行期改变**
+  
+  **2.方法的重载属于静态行为，因此test方法在编译期间确定调用的就是p1和p2的静态类型，也就是Grandpa，因此输出结果都为Grandpa**
+  
+  **3.方法的调用者为MyTest4类的对象**
+  
+- 实现：证明方法重写是动态行为
+
+  <!--代码-->
+
+  ```java
+  public class MyTest5 {
+      public static void main(String[] args) {
+          Fruit apple = new Apple();
+          Fruit orange = new Orange();
+  
+          apple.test();
+          orange.test();
+      }
+  }
+  
+  class Fruit{
+      public void test(){
+          System.out.println("Fruit");
+      }
+  }
+  class Apple extends Fruit{
+      @Override
+      public void test(){
+          System.out.println("Apple");
+      }
+  }
+  class Orange extends Fruit{
+      @Override
+      public void test(){
+          System.out.println("Orange");
+      }
+  }
+  /* output
+  Apple
+  Orange
+  */
+  ```
+
+  <!--反编译-->
+
+  ```shell
+   0 new #2 <ByteCode/Apple>
+   3 dup
+   4 invokespecial #3 <ByteCode/Apple.<init>>
+   7 astore_1
+   8 new #4 <ByteCode/Orange>
+  11 dup
+  12 invokespecial #5 <ByteCode/Orange.<init>>
+  15 astore_2
+  16 aload_1
+  17 invokevirtual #6 <ByteCode/Fruit.test>
+  20 aload_2
+  21 invokevirtual #6 <ByteCode/Fruit.test>
+  24 return
+  ```
+
+  <!--解析-->
+
+  1. 执行流程
+     1. 0：新建Apple对象
+     2. 3：将对象复制到栈顶
+     3. 4：调用Apple构造方法
+     4. 7：返回apple对象的存储地址
+     5. 16：从栈顶取出apple对象
+     6. **17：invokevirtual指令的逻辑是：编译期间，由于是Fruit类，因此指向的是Fruit中的test方法；但是在运行期，会查找apple变量指向的实际类型，查找所指对象中是否存在test方法，如果存在且符合权限访问，则调用。如果不存在或不符合则向上（父类）查找 <!--虽然#6指向的是Fruit中e的test方法，但是invokevirtual在运行期会先查找变量指向的实际类型-->**
+  2. 方法的重写是属于动态行为
+  3. 方法的调用者是apple对象
+
+- 实现：多态中常见的一个问题
+
+  <!--代码-->
+
+  ```java
+  class Father{
+    void test1(){};
+  }
+  class Son extends Father{
+    // 子类的私有方法
+    void test2(){};
+  }
+  
+  public class Test{
+    public static void main(String[] args){
+      Father son = new Son();
+      son.test2;
+    }
+  }
+  /* output
+  编译期间报错
+  */
+  ```
+
+  <!--解析-->
+
+  1. **invokevirtual的逻辑，在反编译中会指向 Father.test2，但是此方法并不存在。在编译期间，son的静态类型是Father，因此invokevirtual会在Father类中查找test2方法，但是无法找到，所以会在编译期间报错**
 
 ### 5.1.6 方法调用流程
 
