--- a/UnderstandingTheJVM/三.字节码.md
+++ b/UnderstandingTheJVM/三.字节码.md
@@ -853,6 +853,63 @@ public class MyTest2 {
   - 部分符号引用是在类加载阶段转换为直接引用，称为静态解析
   - 部分符号引用是在每次运行期转换为直接引用，称为动态链接，体现了多态
 
+### 2.invoke助记符
+
+- 分类
+  - invokeinterface:调用接口中的方法（在运行期决定，具体调用的是实现该接口的类的具体方法）
+  - invokestatic:调用静态方法
+  - invokespecial:调用私有方法、构造方法（init）、父类方法
+  - invokevirtual:调用虚方法，运行期动态查找的过程
+  - invokedynamic:动态调用方法
+
+### 3.静态解析——重点
+
+- 静态解析 定义：在类的加载阶段，就将符号引用转换为直接引用
+
+- 种类
+
+  - 父类方法
+
+  - 静态方法
+
+  - 构造方法
+
+  - 私有方法
+
+    <!--以上四个方法也称为非虚方法-->
+
+## 3.11 指令集——重点
+
+- JVM在执行java代码时，会将编译执行和解释执行结合起来
+
+- 解释执行 定义：通过解释器读取字节码，读取到相应指令就执行相应指令
+
+- 编译执行 定义：通过即时编译器（Just In Time）将字节码转换成本地机器码来执行。现代JVM会根据热点代码（经常使用）来生成本地机器码
+
+- 基于栈的指令集和基于寄存器的指令集关系
+
+  - JVM执行指令时，使用的是基于栈的指令集
+
+  - 基于栈的指令集主要操作是出栈和入栈
+
+  - 基于栈的指令集优势在于平台移植性好；基于寄存器的指令集和硬件关联，平台移植性差
+
+  - 基于栈的指令集缺点在于完成相同操作的指令数量多于基于寄存器的指令集
+
+    原因是：基于栈的指令集在内存中完成，基于寄存器的指令集在CPU执行
+
+    <!--举例：执行“2-1 = 1”的操作，基于栈的指令集：第一步将2入栈，第二步将1入栈，第三步将1和2同时出栈，第四步运算后，第五步将结果压入栈；基于寄存器的指令集：第一步将2放入寄存器，第二步执行减1操作，第三步将结果保存-->
+
+- 实现：JVM执行指令时，是基于栈的指令集。分析指令——重点
+
+  <!--流程图-->
+
+  ![](assets/3.11栈的指令集.png)
+
+
+
+
+
 
 
 
