--- a/UnderstandingTheJVM/三.字节码.md
+++ b/UnderstandingTheJVM/三.字节码.md
@@ -370,7 +370,8 @@ Constant pool:
 - 作用：描述方法数量和方法表
 - 规则
   - 跟着Fields
-  - 方法数量+方法表，如果方法数量为零，则无方法表
+  - 方法数量+方法表
+  - Methods中允许不存在init方法 <!--比如包级别的静态属性和方法能直接通过名称调用-->
   - **通过attributes_count字段，来判断是否存在属性表。如果attributes_count不为零，后续字节为attribute_name_index，通过查询常量池确定属性表——重点**
 - 方法表
 
@@ -906,11 +907,9 @@ public class MyTest2 {
 
   ![](assets/3.11栈的指令集.png)
 
+## 3.12 动态代理——default
 
-
-
-
-
+https://www.bilibili.com/video/av47756459/?p=58
 
 
 
